# rust-spfresh-project

./: README.md  docker-compose.yml  rush-spfresh.md
backend/: Cargo.toml  Dockerfile
backend/data/: reviews.index
backend/fastembed-rs/: Cargo.toml
backend/fastembed-rs/src/: lib.rs
backend/spfresh/: Cargo.toml
backend/spfresh/src/: lib.rs
backend/src/: main.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html
frontend/src/: app.rs  bulk_form.rs  config.rs  lib.rs  main.rs  review_form.rs  search_form.rs
