[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.18"
hyper = "0.14"

fastembed = { path = "./fastembed-rs" }
spfresh = { path = "./spfresh" }
tower-http = { version = "0.4", features = ["cors"] }
tower = "0.5.2"
http = "0.2"